
<resources>
    <string name="app_name">Sallefy</string>

    <string name="default_track_title">Song Title</string>
    <string name="default_track_author">Author</string>
    <string name="default_duration">00:00</string>
    <string name="default_playlist_name">Playlist Title</string>
    <string name="default_user_name">User Name</string>
    <string name="default_user_login">User Login</string>
    <string name="default_user_followed">nFollowers</string>
    <string name="default_user_following">nFollowing</string>
    <string name="default_user_tracks">nTracks</string>
    <string name="default_user_playlists">nPlaylists</string>
    <string name="default_playlist_song_amount">20 songs</string>

    <string name="user_">User</string>
    <string name="description">Description</string>
    <string name="app_id">4F8B3483</string>
    <string name="media_route_menu_title">Play on&#8230;</string>

    <string name="descriptionChange">New Description</string>
    <string name="nameChange">New Name</string>

    <string name="info">i</string>
    <string name="action_login">Log in</string>
    <string name="action_logout">Log out</string>
    <string name="action_register">Register</string>
    <string name="action_accept">Accept</string>
    <string name="action_decline">Cancel</string>

    <string name="state_wait">Please wait..</string>
    <string name="state_task_in_progress">Task in progress</string>
    <string name="state_error_connexion">Connection error!</string>
    <string name="state_logout_accept">Do you really want to log out?</string>
    <string name="state_success_title">Exit</string>
    <string name="state_task_completed">Task successfully completed!</string>
    <string name="state_error_title">Error</string>
    <string name="state_connected">Connected</string>
    <string name="state_error_default">Something went wrong!</string>
    <string name="state_with_connection">Connection with backend</string>
    <string name="staitc_without_connection">No connection</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="contrasenya">Password</string>
    <string name="nom_d_usuari">username</string>
    <string name="iniciar_sessi">Log In</string>
    <string name="no_estas_registrat">Not registered yet?</string>
    <string name="registra_t_aqui">Register here</string>
    <string name="registrar_se">Register</string>
    <string name="reproduint_se">Now Playing</string>
    <string name="crear_nova_playlist">Create new playlist</string>
    <string name="nom_per_la_playlist">Name for the playlist</string>
    <string name="cancelar">Cancel</string>
    <string name="a_quina">Choose a playlist:</string>
    <string name="biblioteca">Library</string>
    <string name="descobrir_can_ons">My Songs</string>
    <string name="les_meves_playlists">My Playlists</string>
    <string name="totes_les_playlists">All playlists</string>
    <string name="sampleplaylist">All Songs</string>
    <string name="autor_de_la_playlist">Playlist author</string>
    <string name="seguir">Follow</string>
    <string name="nom_de_la_playlist">Playlist Name</string>
    <string name="penja_la_teva_can">Upload your song!</string>
    <string name="titol_de_la_can">Song Title</string>
    <string name="g_nere_de_la_can">Song genre</string>
    <string name="crear">Choose file</string>
    <string name="upload">Upload file</string>
    <string name="show">Show my uploads</string>
    <string name="scroll_for_more">Scroll to see more</string>
    <string name="home">Home</string>
    <string name="Search">Search</string>
    <string name="profile">My Profile</string>
    <string name="top_played">Popular playlists</string>
    <string name="discover_artists">Popular artists</string>
    <string name="following_playlists">Playlists you follow</string>
    <string name="random">Shuffle</string>
    <string name="addsongs_title">Add Songs</string>
    <string name="backText">Back</string>
    <string name="top_songs">Top Songs</string>
    <string name="top_playists">Playlist by the artist</string>
    <string name="all_songs_by_artist">Checkout all songs by artist!</string>
    <string name="default_reproductions">100.000</string>
    <string name="track_thumbnail">Track Thumbnail</string>
    <string name="nom_de_la_canco">Song Name</string>
    <string name="edita">Enter file name</string>
    <string name="showUpload">Show Uploads</string>
    <string name="selectItem">Select Thumbnail</string>
    <string name="deletItem">Delete Cover</string>

    <string name="search_title">Search</string>
    <string name="search_bar">Search here…</string>
    <string name="genere_rock">ROCK</string>
    <string name="genere_pop">POP</string>
    <string name="genere_dance">DANCE</string>
    <string name="genere_country">COUNTRY</string>
    <string name="genere_hiphop">HIP HOP</string>
    <string name="genere_rap">RAP</string>
    <string name="genere_jazz">JAZZ</string>
    <string name="genere_blues">BLUES</string>
    <string name="genere_classical">CLASSICAL</string>
    <string name="genere_folk">FOLK</string>
    <string name="genere_techno">TECHNO</string>
    <string name="genere_disco">DISCO</string>
    <string name="genere_soul">SOUL</string>
    <string name="genere_celtic">CELTIC</string>
    <string name="genere_heavymetal">HEAVY METAL</string>
    <string name="genere_reggae">REGGAE</string>
    <string name="genere_alternativerock">ALTERNATIVE ROCK</string>
    <string name="genere_rhythmandblues">RHYTHM AND BLUES</string>
    <string name="nom_artista">nom_artista</string>
    <string name="favoritos">Add to favorites</string>
    <string name="edit">"Edit song"</string>
    <string name="user">"See artist"</string>
    <string name="playlist">Add to playlist</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_">Playlists</string>
    <string name="songs_">Songs</string>
    <string name="statistics">Statistics</string>
    <string name="my_songs">My Songs</string>
    <string name="playlists">Playlists</string>
    <string name="filters">Filters</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="create_new_song">Create new song</string>
    <string name="genere_electronica">ELECTRONICA</string>
    <string name="genere_default_name">Genere</string>
    <string name="add_new_song">Add new song</string>
    <string name="settings">Settings</string>
    <string name="settings_change_username">Update Username</string>
    <string name="settings_change_email">Update Email</string>
    <string name="settings_add_new_username">Write your new username</string>
    <string name="settings_add_new_email">Write your new email</string>
    <string name="log_out">LOG OUT</string>

    <string name="settings_change_first_name">First Name</string>
    <string name="settings_change_last_name">Last Name</string>
    <string name="update">Update Profile</string>
    <string name="settings_change_profile_pic">Profile Pic</string>
    <string name="settings_add_new_first_name">Write your First Name</string>
    <string name="settings_add_new_last_name">Write your Last Name</string>
    <string name="followed_users">Following</string>
    <string name="apply_filter">Apply filter</string>
    <string name="filter_track_search_genre">Type a genre</string>
    <string name="filter_tracks_title">Filter tracks</string>
    <string name="filter_track_by_ascendent">Asc</string>
    <string name="filter_track_by_descendent">Desc</string>
    <string name="reset_filters">Reset</string>
    <string name="filter_tracks_descendent">Filter tracks</string>


    <string name="noTopAvailable">There are no Top Songs available</string>
    <string name="noPlistAvailable">There are no Playlist available</string>
    <string name="noSongsAvailable">There are no Songs available</string>
    <string name="remember">Remember Me</string>


    <string name="top_listened_genres_user">Top listened genres</string>
    <string name="top_played_tracks_user">Top played tracks</string>
    <string name="whats">Whatsapp</string>
    <string name="insta">Instagram</string>
    <string name="face">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="twitter">Twitter</string>
    <string name="copy">Copy link</string>
    <string name="more">More</string>
    <string name="sms">SMS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_following">You don\'t follow any playlists!</string>
    <string name="search_user_">Users</string>

    <string name="title_edit">Edit Your Song</string>
    <string name="boto_change">Canviar portada</string>
    <string name="nom_canco">nom_canco</string>
    <string name="boto_canviar_genere">canviar genere</string>
    <string name="canvi_genere">Gènere</string>
    <string name="canvi_nom">Name of the song</string>
    <string name="canvi_durada">Duration</string>
    <string name="eliminar">Remove from playlist</string>
    <string name="share">Share</string>
    <string name="tots_generes">ALL</string>
    <string name="generes_actuals">ACTUAL</string>
    <string name="edit_playlist">Edit</string>
    <string name="delete">delete</string>
    <string name="message">Do you want to edit or delete this playlist?</string>
    <string name="numFollowers">X Followers</string>
    <string name="deletePlaylist">Delete playlist</string>
    <string name="download">Download playlist</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="write_your_current_password">Write your current password</string>
    <string name="write_your_new_password">Write your new password</string>
    <string name="change_password">Change Password</string>
    <string name="back">Cancel changes</string>
    <string name="by_sallefy">By Sallefy</string>
</resources>

