<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_followed_item_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="5dp"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center">
            <ImageButton
                android:id="@+id/userImage"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:background="@android:color/transparent"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="25dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/userLogin"
                style="@style/SongTitleTheme"
                android:layout_width="160dp"
                android:autoSizeTextType="uniform"
                android:layout_height="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/default_user_name"
                />



            <TextView
                android:id="@+id/numUsersFollowed"
                style="@style/SongArtistTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/default_user_followed" />

            <TextView
                android:id="@+id/numUsersFollowing"
                style="@style/SongArtistTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/default_user_following" />
            <TextView
                android:id="@+id/userNumTracks"
                style="@style/SongArtistTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/default_playlist_song_amount" />

            <TextView
                android:id="@+id/numUsersPlaylists"
                style="@style/SongArtistTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/default_user_playlists" />

        </LinearLayout>





    </LinearLayout>

</LinearLayout>