<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fons"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/penja_la_teva_can"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/ic_fons_upload"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/titol_de_la_can"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/create_song_title"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox_btn"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/g_nere_de_la_can"
                android:textColor="#000000"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/create_song_genre"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox_btn"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create_song_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_choose_button"
                android:text="@string/crear"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/create_song_file_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/create_song_accept"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/phone_btn"
                android:text="@string/action_accept"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/create_song_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/action_decline"
                android:textAllCaps="false"
                android:textColor="#CA0000"
                android:textSize="20sp" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>