<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/fons_blur">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nomNovaPlaylist"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/rectangle_new_playlist"
            android:gravity="center"
            android:textColorHint="#70353535"
            android:layout_marginTop="150dp"
            android:hint="@string/nom_per_la_playlist"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/AfegirAPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/crear_nova_playlist"
            android:textColor="#2BF571"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="15dp">

        <Button
            android:id="@+id/amagarNovaPlaylist"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_blanc_small_sombra"
            android:text="@string/cancelar"
            android:textAllCaps="false"
            android:textColor="#21D760"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="485dp" />

    </LinearLayout>





</LinearLayout>